--- a/dtests/src/test/java/io/snappydata/hydra/deployPackageJar/deployPackageJarivy2.conf
+++ b/dtests/src/test/java/io/snappydata/hydra/deployPackageJar/deployPackageJarivy2.conf
@@ -6,7 +6,7 @@ Test verifies deploy package, list packages and undeploy jar command";
 
 INCLUDE $JTESTS/io/snappydata/hydra/northwind/startDualModeCluster.conf;
 
-TASK       taskClass   = io.snappydata.hydra.deploy_package_jar.TestScenario_Deploy_Pkg_Deploy_jar taskMethod= HydraTask_deployPackageUsingJDBC_ivy2
+TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployPackageUsingJDBC_ivy2
 threadGroups = snappyThreads
 maxTimesToRun = 1;
 
