--- a/dtests/src/test/java/io/snappydata/hydra/deployPackageJar/deployPackageWithSnappyJob.conf
+++ b/dtests/src/test/java/io/snappydata/hydra/deployPackageJar/deployPackageWithSnappyJob.conf
@@ -8,9 +8,9 @@ INCLUDE $JTESTS/io/snappydata/hydra/northwind/startDualModeCluster.conf;
 
 
 TASK    taskClass = io.snappydata.hydra.cluster.SnappyTest taskMethod  = HydraTask_executeSnappyJobUsingJobScript
-        io.snappydata.hydra.cluster.SnappyPrms-jobClassNames = io.snappydata.hydra.deploy_package_jar.DeployPkgXMLJob
-        #io.snappydata.hydra.cluster.SnappyPrms-appPropsForJobServer = "xmlFileLocation=${xmlFileLocation}"
-        io.snappydata.hydra.cluster.SnappyPrms-appPropsForJobServer = "/home/cbhatt/snappydata/dtests/src/resources/scripts/deploy_package_jar/books.xml"
+        io.snappydata.hydra.cluster.SnappyPrms-jobClassNames = io.snappydata.hydra.deployPackageJar.DeployPkgXMLJob
+        io.snappydata.hydra.cluster.SnappyPrms-appPropsForJobServer = "xmlFileLocation=${xmlFileLocation}"
+        io.snappydata.hydra.cluster.SnappyPrms-userAppName = "xmlProcessing"
         io.snappydata.hydra.cluster.SnappyPrms-userAppJar = snappydata-store-scala-tests*tests.jar
         io.snappydata.hydra.cluster.SnappyPrms-isDeployPkg = true
         io.snappydata.hydra.cluster.SnappyPrms-jarIdentifier = "com.databricks:spark-xml_2.11:0.4.1"
@@ -18,3 +18,7 @@ TASK    taskClass = io.snappydata.hydra.cluster.SnappyTest taskMethod  = HydraTa
         maxTimesToRun = 1;
 
 INCLUDE $JTESTS/io/snappydata/hydra/northwind/stopDualModeCluster.conf;
+
+
+
+//"dataFilesLocation=${dataFilesLocation},tableType=${tableType},createLargeOrderTable=${createLargeOrderTable}"
