Add the test case for comma separated  multiple packages, multiple repos and remove the comments from deployPkgWthSnappyJob

--- a/dtests/src/test/java/io/snappydata/hydra/deployPackageJar/deployPackageJar.conf
+++ b/dtests/src/test/java/io/snappydata/hydra/deployPackageJar/deployPackageJar.conf
@@ -6,39 +6,47 @@ hydra.Prms-testDescription = "This is a good test case.
 
 INCLUDE $JTESTS/io/snappydata/hydra/northwind/startDualModeCluster.conf;
 
-TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployPackageUsingJDBC_LocalCache
-           threadGroups = snappyThreads
-           maxTimesToRun = 1;
+//TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployPackageUsingJDBC_LocalCache
+//           threadGroups = snappyThreads
+//           maxTimesToRun = 1;
+//
+//TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployJarUsingJDBC_LocalCache
+//           threadGroups = snappyThreads
+//           maxTimesToRun = 1;
+//
+//TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployPackage_InvalidName
+//           threadGroups = snappyThreads
+//           maxTimesToRun = 4;
+//
+//TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployJar_InvalidName
+//           threadGroups = snappyThreads
+//           maxTimesToRun = 2;
+//
+//TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployCommaDelimitedPkgs_CommaDelimitedJars
+//           threadGroups = snappyThreads
+//           maxTimesToRun = 1;
+//
+//TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deploySpaceDelimitedPkgs
+//           threadGroups = snappyThreads
+//           maxTimesToRun = 1;
+//
+//TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deploySpaceDelimitedJars
+//           threadGroups = snappyThreads
+//           maxTimesToRun = 1;
+//
+//TASK       taskClass = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployPackageUniqueAliasName
+//           threadGroups = snappyThreads
+//           maxTimesToRun = 1;
+//
+//TASK       taskClass = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployJarUniqueAliasName
+//           threadGroups = snappyThreads
+//           maxTimesToRun = 1;
+//
+//TASK       taskClass = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployJarUniqueAliasName
+//           threadGroups = snappyThreads
+//           maxTimesToRun = 1;
 
-TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployJarUsingJDBC_LocalCache
-           threadGroups = snappyThreads
-           maxTimesToRun = 1;
-
-TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployPackage_InvalidName
-           threadGroups = snappyThreads
-           maxTimesToRun = 4;
-
-TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployJar_InvalidName
-           threadGroups = snappyThreads
-           maxTimesToRun = 2;
-
-TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployCommaDelimitedPkgs_CommaDelimitedJars
-           threadGroups = snappyThreads
-           maxTimesToRun = 1;
-
-TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deploySpaceDelimitedPkgs
-           threadGroups = snappyThreads
-           maxTimesToRun = 1;
-
-TASK       taskClass   = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deploySpaceDelimitedJars
-           threadGroups = snappyThreads
-           maxTimesToRun = 1;
-
-TASK       taskClass = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployPackageUniqueAliasName
-           threadGroups = snappyThreads
-           maxTimesToRun = 1;
-
-TASK       taskClass = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployJarUniqueAliasName
+TASK       taskClass = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod= HydraTask_deployPkgWithRepos
            threadGroups = snappyThreads
            maxTimesToRun = 1;
 
