Added the test case for deploy pkg (global deploy) with NICE Kill - Lead HA Scenario

--- a/dtests/src/test/java/io/snappydata/hydra/deployPackageJar/deployPackageLocallyLeadHAMeanKill.conf
+++ b/dtests/src/test/java/io/snappydata/hydra/deployPackageJar/deployPackageLocallyLeadHAMeanKill.conf
@@ -1,8 +1,7 @@
-hydra.Prms-testRequirement = "Test to verify deploy package feature using user provided local cache path";
+hydra.Prms-testRequirement = "Test to verify lead HA with deploy package feature using --package option (visibility local to Job)";
 hydra.Prms-testDescription = "This is a good test case.
-This test starts the snappy cluster in embedded mode.Select the third part connector to deploy (Ex. spark-avro connector).
-Deploy the few packages, list the packages and if all the packages deployed successfully, undeployed all the packages.
-Test verifies deploy package, list packages and undeploy jar command";
+This test starts the snappy cluster in embedded mode. Execute the xml file processing job with databricks xml third part library.
+Use the --package option in deploy jar feature so deployed package are visible to job only. Here we kill the lead node forcefully (i.e. MEAN Kill)";
 
 INCLUDE $JTESTS/io/snappydata/hydra/northwind/startDualModeCluster.conf;
 
@@ -12,7 +11,7 @@ threadGroups = snappyThreads, locatorThreads, snappyStoreThreads, leadThreads;
 INITTASK    taskClass   = io.snappydata.hydra.cluster.SnappyTest taskMethod  = backUpLeadConfigData
 threadGroups = snappyThreads;
 
-TASK       taskClass = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod = HydraTask_deployPkgAndMeanKillLeadNode
+TASK       taskClass = io.snappydata.hydra.deployPackageJar.DeployPkgDeployJar taskMethod = HydraTask_deployPkgLocallyAndMeanKillLeadNode
 io.snappydata.hydra.cluster.SnappyPrms-jobClassNames = io.snappydata.hydra.deployPackageJar.DeployPkgXMLJob
 io.snappydata.hydra.cluster.SnappyPrms-appPropsForJobServer = "xmlFileLocation=${xmlFileLocation}"
 io.snappydata.hydra.cluster.SnappyPrms-userAppName = "xmlProcessing"
